Link to P3 + almost all text from P4

--- a/P3/P3_changes_5.html
+++ b/P3/P3_changes_5.html
@@ -37,6 +37,13 @@
         </section>
 
         <section>
+            <header><h2>Link to the website</h2></header>
+            <p>
+                <a href="http://folk.ntnu.no/alekskn/webtek/project/">Link</a>
+            </p>
+        </section>
+
+        <section>
             <header><h2>Changes made</h2></header>
 
             <section>
