--- a/P4/P4_testing_5.html
+++ b/P4/P4_testing_5.html
@@ -213,12 +213,57 @@
 
             <section>
                 <header><h3>Test person using a Mac with Safari</h3></header>
-                <p></p>
+                <p>
+                    This user was very quick to use the navbar and always found
+                    the correct pages for each question after a single click.
+                    There was some confusion regarding the content on some of
+                    the pages and how to interact with it though.
+                </p>
+                <p>
+                    When they were tasked to find an old news post on the
+                    newsfeed page, they clicked the “Show all news”-button a
+                    total of 4 times before they realized all news had been
+                    loaded in. Furthermore, when tasked with finding what anime
+                    are being screened this semester, they went through both
+                    “Screenings” and “Newsfeed” before concluding with “It’s
+                    different”, not being certain what anime was being screened
+                    throughout the semester.
+                </p>
+                <p>
+                    After the tasks they commented a lot on the overall design
+                    of the website, describing it as straightforward to use and
+                    minimalistic. They also thought it was nice how it was clear
+                    what elements were clickable. On the other hand, they found
+                    it confusing that the list on the voting page reset after
+                    submitting their votes, suggesting that they should stay as
+                    submitted.
+                </p>
             </section>
 
             <section>
                 <header><h3>General experiences from testing</h3></header>
-                <p></p>
+                <p>
+                    Some of the live tests uncovered that how to vote was
+                    unclear. One user tried clicking an element and awaiting
+                    response, and then pressing the submit button and clicking
+                    ‘OK’ on the subsequent prompt. They performed these actions
+                    for a few repetitions, before finally reading the textual
+                    instructions on the top of the page and thereby discovering
+                    that the elements could be dragged and dropped.
+                </p>
+                <p>
+                    Overall, among the eight live testers, there were a few
+                    recurring issues. In particular, finding information on how
+                    to attend a screening seemed to be unclear. Several users
+                    navigated to the screenings page, containing the time and
+                    location of the screenings, but it was unclear that this was
+                    the information they needed. They tried clicking the popup
+                    containing only the summary, following by closing the popup
+                    and navigating elsewhere to the site. It is apparent that
+                    this information could be relayed clearer, for example via a
+                    small text description on the front page and/or the
+                    screenings page.
+                </p>
             </section>
         </section>
 
@@ -226,17 +271,80 @@
             <header><h2>Feedback Summary</h2></header>
             <section>
                 <header><h3>Positive feedback</h3></header>
-                <p></p>
+                <p>
+                    Users seemed to agree in large that the front page was
+                    helpful. Finding information about screenings and news
+                    seemed to not be an issue for the most part. Most users
+                    commented positively on ease of navigation. Praise was also
+                    given to the synopsis popups, and pointed out that such a
+                    solution was much better than being navigated to a separate
+                    page.
+                </p>
             </section>
             <section>
                 <header><h3>Constructive feedback</h3></header>
-                <p></p>
+                <p>
+                    Opinions about the overall design were largely differing.
+                    Some users commented that the design was easy on the eyes
+                    and left an appropriate amount of spacing between elements.
+                    Others said they did not like the colors, and that the
+                    navigation bar was too small on a phone. We also received
+                    feedback that the sign up button was too different compared
+                    to the rest of the menu items.
+                </p>
+                <p>
+                    As discussed in the section about observed testing, the
+                    process of voting was criticized. Both in the live testing
+                    and the survey, we received feedback that finding out how to
+                    vote was not trivial. One user also noted the lack of voting
+                    results.
+                </p>
             </section>
         </section>
 
         <section>
             <header><h2>Response to feedback</h2></header>
-            <p></p>
+            <p>
+                Some of the feedback collected was used to further develop the
+                website before the deadline, and these changes have been
+                mentioned in P3. For example, many users struggled finding
+                information about which anime is being screened this semester.
+                The screenings page was updated to list this explicitly. We also
+                changed the signup button to be more stylistically similar to
+                the rest of the menu items.
+            </p>
+            <p>
+                As described earlier, there seemed to be a lack of clarity in
+                some cases regarding how to vote for which anime a user wants to
+                watch. This problem could be (partially or completely) solved
+                with the following measures:
+            </p>
+            <ul>
+                <li>
+                    Create a visual indication, like an icon for every list
+                    element, indicating that the elements can be dragged
+                </li>
+                <li>
+                    Shorten the text explanation, or add a shorter but
+                    physically larger element of text saying for example “Drag
+                    and drop to vote”
+                </li>
+                <li>
+                    After voting, the user should be informed that their votes
+                    have been submitted
+                </li>
+            </ul>
+            <p>
+                In addition, the voting page was known not to work in Firefox
+                and on touch devices. This is reflected in the responses from
+                the corresponding question on the survey.
+            </p>
+            <p>
+                There were many who commented on how our site only provided
+                Discord as a means to contact Anime NTNU. Although we wanted to
+                address this issue, Anime NTNU as an organization has no other
+                means of contacting them, so there was little we could do.
+            </p>
         </section>
 
         <section>
@@ -244,17 +352,74 @@
 
             <section>
                 <header><h3>Maja</h3></header>
-                <p></p>
+                <p>
+                    During this project I have learned the importance of good
+                    communication and teamwork, especially considering the
+                    current circumstances. Due to all the group members having
+                    different time schedules in addition to the ongoing
+                    pandemic, we have been relying a lot on digital platforms
+                    for communication and sharing work. We have for example been
+                    using Git and Github to work on the same project, making it
+                    easy and efficient to get the project up-to-date. This was
+                    mainly possible due to the team members prior knowledge in
+                    these technologies and platforms, however, I still do not
+                    think it would have been easy had we not been constantly
+                    requesting updates and feedback from each other.
+                </p>
+                <p>
+                    I have also gained more experience using Javascript during
+                    this project. I have used Javascript before, but I have
+                    never made a drag-and-drop poll like I did for the voting
+                    page. This was a challenge in itself, and I realised, after
+                    making it, that we could have looked at other options for
+                    the voting system, as the one I implemented into the website
+                    is not functional on touch screens.
+                </p>
+                <p>
+                    Lastly, I have learned a lot about working in a project with
+                    a real client. Having worked with a real client made me
+                    realise the importance of thinking about what you are making
+                    and who you are making it for. This was made apparent after
+                    receiving feedback from the client in the design process as
+                    well as when implementing the actual features on the
+                    website.
+                </p>
             </section>
 
             <section>
                 <header><h3>Tobias</h3></header>
-                <p></p>
+                <p>
+                    I have learned how-to plan a website and the importance of
+                    properly planning a website before production. There are
+                    many aspects of producing a website that I never would’ve
+                    thought of if they were not specified in the project
+                    deliverables. By specifying many of the production stages
+                    and elements of a webpage, the production of said elements
+                    also became much easier. I have also seen the importance of
+                    user testing, and how the general consensus of the testers
+                    may differ from our own expectations and opinions. In the
+                    future I would be inclined to include user testing on more
+                    projects, both personal and other assignments.
+                </p>
             </section>
 
             <section>
                 <header><h3>Aleksander</h3></header>
-                <p></p>
+                <p>
+                    I have seen how easy it is to overlook implementation
+                    details in the planning phase. During development, in many
+                    cases, we needed to create more files and functions than
+                    what we initially imagined. For example, to make the
+                    frontpage elements display nicely on narrow screens, both
+                    media queries and flexboxes were utilized. Additionally, we
+                    seemed to underestimate what functionality would be useful.
+                    For instance, the amount of news posts from Anime NTNU’s
+                    existing website was quite large, causing us to implement a
+                    feature for showing only a subset of the posts. I believe
+                    this goes to show how important it is to use a good amount
+                    of time for planning, to make time and workload estimates as
+                    accurate as possible.
+                </p>
             </section>
 
             <section>
