Images are now the same size

--- a/P4/P4_testing_5.html
+++ b/P4/P4_testing_5.html
@@ -37,7 +37,7 @@
         </section>
 
         <section>
-            <header><h2>Testing Document</h2></header>
+            <header><h2>Testing document</h2></header>
             <p>
                 Part of our user testing consisted of sending a survey to likely
                 members of our target audience. Below are the questions used in
@@ -77,7 +77,7 @@
         </section>
 
         <section>
-            <header><h2>Tester Audience</h2></header>
+            <header><h2>Tester audience</h2></header>
             <p>
                 For testing, we performed both surveying with a web form, and
                 live user testing. A Google Form was sent to members of Anime
