Rest of P3 and P4

--- a/P3/P3_changes_5.html
+++ b/P3/P3_changes_5.html
@@ -142,11 +142,11 @@
             <section>
                 <header><h3>Popups</h3></header>
                 <p>
-                    The popups were kept very close to the initial mockup in P2.
-                    The only major difference is that the anime pop-ups will use
-                    a scrollbar for long descriptions to prevent the box from
-                    growing bigger than the screen. Also, clicking the popup
-                    background will now also close the popup. The same
+                    The popups were kept quite close to the initial mockup in
+                    P2. The only major difference is that the anime pop-ups will
+                    use a scrollbar for long descriptions to prevent the box
+                    from growing bigger than the screen. Also, clicking the
+                    popup background will now also close the popup. The same
                     functionality was implemented on the signup popup for
                     consistency.
                 </p>
