--- a/P4/P4_testing_5.html
+++ b/P4/P4_testing_5.html
@@ -424,7 +424,42 @@
 
             <section>
                 <header><h3>Sondre</h3></header>
-                <p></p>
+                <p>
+                    For me, one of the main takeaways from this project is how
+                    you should be flexible in regards to former plans. In P2, we
+                    created an overview of all files we believed would be in the
+                    end product and distributed responsibility over them to the
+                    members of the group. Planning was invaluable in getting all
+                    the members on the same page and designing the overall look
+                    of the website. Although once we got started on actually
+                    developing the website, it quickly became clear that we
+                    needed more JavaScript than anticipated. For example, we
+                    originally didn’t have a script for showing news, but
+                    decided it was necessary once the client expressed interest
+                    in having all old news on the website.
+                </p>
+                <p>
+                    Furthermore, I was the main contact person with the client,
+                    cooperating with him to create a product he would enjoy.
+                    Through this, I feel I’ve developed greater insight into
+                    what questions one should ask to a product owner and the
+                    importance of asking for feedback regularly, such that
+                    problems are identified early. Near the end of the project
+                    it became clear to me that just cooperating with the client
+                    isn’t enough to make a good website though, as the user
+                    tests revealed some flaws in our website. Despite our best
+                    attempts at making an intuitive website, there were still
+                    parts of it which caused confusion, often in ways I could
+                    completely understand once we were made aware of them.
+                </p>
+                <p>
+                    In conclusion, I’d like to return my first statement.
+                    Flexibility has been the key factor in making a website we
+                    can be happy with. From flexibility in adapting our website
+                    based on the client’s and test users’ feedback, to
+                    flexibility with scheduling meetings, to the flex boxes on
+                    the frontpage.
+                </p>
             </section>
         </section>
     </body>
