--- a/P4/P4_testing_5.html
+++ b/P4/P4_testing_5.html
@@ -314,6 +314,14 @@
                 the rest of the menu items.
             </p>
             <p>
+                One of the other notable changes we made after user testing was
+                to the newsfeed page. We originally had a button which loaded in 
+                all the old news past the first twenty at once when you clicked it.
+                As several users found this confusing and impractical, the newsfeed
+                was changed to load more news in increments of 20 when the user 
+                scrolled near the end of the page.
+            </p>
+            <p>
                 As described earlier, there seemed to be a lack of clarity in
                 some cases regarding how to vote for which anime a user wants to
                 watch. This problem could be (partially or completely) solved
